<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_layout_margin">

    <!-- Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/h1_text_size"
            android:textStyle="bold"
            android:textColor="@color/primary_blue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="@dimen/h3_text_size"
            android:layout_margin="@dimen/gap_medium"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_input_email"
            android:textSize="@dimen/h4_text_size"
            android:layout_marginStart="@dimen/gap_small"
            android:layout_marginBottom="@dimen/gap_medium"/>
        <EditText
            android:id="@+id/inputEmail"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/style_rounded_edit_text"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_input_password"
            android:textSize="@dimen/h4_text_size"
            android:layout_marginStart="@dimen/gap_small"
            android:layout_marginVertical="@dimen/gap_medium"/>
        <EditText
            android:id="@+id/inputPassword"
            android:hint="@string/hint_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/style_rounded_edit_text"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/loginButton"
            app:backgroundTint="@color/primary_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textSize="@dimen/h4_text_size"
            android:paddingVertical="@dimen/gap_medium"
            android:layout_marginTop="@dimen/gap_larger"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/text_suggest_register"
            android:layout_marginTop="10sp"/>
        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/link_register"
            android:textStyle="bold"
            android:layout_marginTop="10sp"/>
    </LinearLayout>

</LinearLayout>